syntax = "proto3";

package demo.httpauth;

option go_package = "github.com/SIN5t/tRPC-go/proto/http_auth";

import "common/metadata.proto";

message LoginRequest{
  common.MetaData mata_data = 1;
  string username = 2;
  string password_hash = 3;
}

message LoginResponse {
  int32 err_code = 1;
  string err_msg = 2;
  Data data = 3;

  message Data {
    string id_ticket = 1;
  }

}

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse);// @alias = /demo/auth/login
}
